; ModuleID = '/home/carl/AnghaBench/zstd/examples/extr_simple_compression.c_createOutFilename_orDie.c'
source_filename = "/home/carl/AnghaBench/zstd/examples/extr_simple_compression.c_createOutFilename_orDie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c".zst\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @createOutFilename_orDie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @createOutFilename_orDie(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @strlen(i8* %6)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = add i64 %8, 5
  store i64 %9, i64* %4, align 8
  %10 = load i64, i64* %4, align 8
  %11 = call i8* @malloc_orDie(i64 %10)
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @memset(i8* %12, i32 0, i64 %13)
  %15 = load i8*, i8** %5, align 8
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @strcat(i8* %15, i8* %16)
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @strcat(i8* %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %20 = load i8*, i8** %5, align 8
  ret i8* %20
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @malloc_orDie(i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1

declare dso_local i32 @strcat(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
